complete user stories

--- a/src/index.css
+++ b/src/index.css
@@ -10,4 +10,17 @@ textarea, #preview {
 }
 #preview {
 	border: 1px solid black;
+	white-space: pre-wrap;
+}
+h1, h2, blockquote, p {
+	margin-top: 0;
+	margin-bottom: 0;
+}
+ul {
+	margin-top: 0;
+	margin-bottom: -16px;	
+}
+li {
+	margin-top: -16px;
+	margin-top: -16px;
 }
