--- a/src/index.css
+++ b/src/index.css
@@ -38,21 +38,15 @@ textarea {
 #preview {
   overflow: scroll;
   box-shadow: 0 0 5px 1px #999;
-  color: #333;
+  color: #000;
   font-family: Avenir, Helvetica, sans-serif;
-  background-color: #f9f9f9;
+  background-color: #fff;
 }
 
-textarea:hover {
+textarea:hover, textarea:focus {
   background-color: #dfdfdf;
   box-shadow: inset 0 0 10px 3px #999;
   color: #111;
-}
-
-#preview:hover {
-  background-color: #fff;
-  box-shadow: 0 0 2px 1px #ccc;
-  color: #000;
 }
 
 code {
@@ -83,6 +77,10 @@ img {
   height: auto;
   display: block;
   margin: 0 auto;
+}
+
+footer {
+	height: 80px;
 }
 
 /*# sourceMappingURL=index.css.map */
