--- a/src/index.scss
+++ b/src/index.scss
@@ -40,21 +40,15 @@ textarea {
 #preview {
 	overflow: scroll;
 	box-shadow: 0 0 5px 1px $border-color;
-	color: #333;
+	color: #000;
 	font-family: Avenir, Helvetica, sans-serif;
-	background-color: #f9f9f9;
+	background-color: #fff;
 }
 
 textarea:hover {
 	background-color: #dfdfdf;
 	box-shadow: inset 0 0 10px 3px $border-color;
 	color: #111;
-}
-
-#preview:hover {
-	background-color: #fff;
-	box-shadow: 0 0 2px 1px #ccc;
-	color: #000;
 }
 
 code {
@@ -85,4 +79,8 @@ img {
 	height: auto;
     display: block;
     margin: 0 auto;
+}
+
+footer {
+	height: 80px;
 }
