--- a/src/index.scss
+++ b/src/index.scss
@@ -15,6 +15,17 @@ header {
 	margin-bottom: 20px;
 }
 
+#copy-btn-span {
+	display: flex;
+	justify-content: center;	
+}
+
+button {
+	font-size: 20px;
+	width: 100px;
+	margin-bottom: 20px;	
+}
+
 #editor-preview {
 	display: flex;
 	justify-content: space-evenly;
@@ -22,7 +33,7 @@ header {
 }
 
 textarea, #preview {
-	height: 80vh;
+	height: 72vh;
 	width: 40vw;
 	resize: none;
 	padding: 40px;
